Changes for 2.1.0

New features:
A.F....... [ZBXNEXT-1491] fixed builded query ordering (Eduard)
.......PS. [ZBX-4393] added usage of configuration parameter Timeout for SNMP checks (dimir)
....I..... [ZBX-6038] added zfs to the default list of filesystems discovered by LLD based templates (Alexei)
A.F.....S. [ZBXNEXT-1500] added support of full 64 bit address space for object IDs in non-DM setup (Sasha)
.......PS. [ZBX-5920] added prefetching of 2 MB of data for Oracle SQL selects (dimir)
A.F.....S. [ZBXNEXT-1466] implemented macros support in trigger comments (dimir, Eduard)
A......... [ZBXNEXT-1491] implemented property array support for all get methods (Pavels)
A......... [ZBXNEXT-1491] implemented the map.get selectUrls parameter (Pavels)
A......... [ZBXNEXT-1491] implemented the itemprototype.get selectDiscoveryRule parameter (Pavels)
A.F....... [ZBXNEXT-484] added filtering by application in Monitoring->Overview and Data/Triggers overview screen elements (Vedmak)
........S. [ZBXNEXT-1089] added support of user macros in global scripts (Sasha)
A.F.I..PS. [ZBXNEXT-1526] added support of configurable number of retries per WEB scenario (Alexei)
A.F.....S. [ZBXNEXT-1286] added support of low-level discovery macros in trigger prototype expressions (Sasha)
A.F.I..PS. [ZBXNEXT-450] added support of SHA authentication protocol and AES privacy protocol for SNMPv3 chacks (Eduard, Sasha)
A.F.I..PS. [ZBXNEXT-308] added support of WEB monitoring using HTTP proxy (Alexei)
A.F.I..PS. [ZBXNEXT-20] added support of templated Web scenarios (Sasha, Vedmak)
A.F....... [ZBXNEXT-887] fixed permission calculation (Eduard)
A......... [ZBXNEXT-1492] dropped support of output shorten for the API get methods (Pavels)
.......PS. [ZBXNEXT-1410] increased performance of operation with historical and configuration caches (Sasha)
........S. [ZBXNEXT-1304] added resolving of LLD macros in an item prototype and a trigger prototype descriptions (Sasha)