@@ -65,7 +65,6 @@ LogFile=c:\zabbix_agentd.log
 ### Option: Server
 #	List of comma delimited IP addresses (or hostnames) of Zabbix servers.
 #	Incoming connections will be accepted only from the hosts listed here.
-#	No spaces allowed.
 #	If IPv6 support is enabled then '127.0.0.1', '::127.0.0.1', '::ffff:127.0.0.1' are treated equally.
 #
 # Mandatory: no
